# 2110101-COM-PROG

./: .gitignore  .prettierrc  2110100.txt  DEV.md  PL Problems List.md  README.md  pyproject.toml  test.py  test.txt  test2.txt
00 Python Intro/: 00 Grader Solutions.md  00 Python Intro.md  00 Solutions.md  00_Intro_02.py  00_Intro_03.py
00-Python-Intro/: README.md
01 Data Type & Expression/: 01_Expr_01.py  01_Expr_02.py  01_Expr_03.py  01_Expr_04.py  01_Expr_06.py  01_Expr_07.py  01_Expr_08.py  01_​Expr_​09.py
01-Data-Type-and-Expression/: README.md
02 Basic String & List/: 02_StrList_01.py  02_StrList_02.py  02_StrList_03.py  02_StrList_F01.py  02_StrList_F02.py  02_​StrList_​04.py  02_​StrList_​05.py  02_​StrList_​06.py  02_​StrList_​07.py  02_​StrList_​08.py  02_​StrList_​F06.py
02-Basic-String-and-List/: README.md
03 Selection/: 03_If_001.py  03_If_002.py  03_If_01.py  03_If_02.py  03_If_03.py  03_If_04.py  03_If_05.py  03_If_06.py  03_If_07.py  03_If_08.py  03_If_F02.py  03_If_F04.py  03_If_F08.py  03_​If_​003.py  03_​If_​004.py
03-Selection/: README.md
04 Repetition/: 04_Loop_001.py  04_Loop_002.py  04_Loop_01.py  04_Loop_03.py  04_Loop_05.py  04_Loop_06.py  04_Loop_10.py  04_Loop_11.py  04_Loop_F03.py  04_Loop_F06.py  04_Loop_F11.py  04_​Loop_​20.py
04-Repetition/: README.md
05 List Processing/: 05_List_12.py  05_List_13.py  05_List_14.py  05_List_15.py  05_List_16.py  05_List_21.py  05_List_22.py  05_List_32.py  05_List_F22.py  05_​List_​23.py  05_​List_​31.py
05-List-Processing/: README.md
06 Function/: 06_​Func_​12.py  06_​Func_​21.py  06_​Func_​23.py  06_​Func_​31.py
06-Function/: README.md
07 String Processing/: 07_​StrFile_​11.py  07_​StrFile_​13.py  07_​StrFile_​22.py  07_​StrFile_​23.py  07_​StrFile_​31.py  07_​StrFile_​33.py  data5.txt
07-String-Processing/: README.md
08 Basic Dict/: 08_​Dict_​11.py  08_​Dict_​12.py  08_​Dict_​21.py  08_​Dict_​22.py  08_​Dict_​23.py  08_​Dict_​31.py
08-Basic-Dict/: README.md
09 Nested Structure/: 09_MoreDC_34.py  09_​MoreDC_​11.py  09_​MoreDC_​21.py  09_​MoreDC_​22.py  09_​MoreDC_​31.py
(+1721 files in other folders)
